2020-03-10         [RELEASE] Release of filefill 1.5.0 (Nicole Cordes)
2020-03-10 9627790 [FEATURE] Allow streaming of files (Nicole Cordes)

2020-03-05         [RELEASE] Release of filefill 1.4.3 (Nicole Cordes)
2020-03-05 52addb2 [BUGFIX] Enforce lower file extension for comparison (Nicole Cordes)

2020-02-26         [RELEASE] Release of filefill 1.4.2 (Nicole Cordes)
2020-02-26 a58828b [BUGFIX] Use correct identifier canonicalization (Nicole Cordes)

2018-10-29         [RELEASE] Release of filefill 1.4.1 (Nicole Cordes)
2018-10-29 0abe965 [BUGFIX] Always enforce case sensitive file system (Nicole Cordes)
2018-10-29 8f9df36 [BUGFIX] Remove incompatible declare(strict_types) annotation (Nicole Cordes)

2018-10-03         [RELEASE] Release of filefill 1.4.0 (Nicole Cordes)
2018-10-03 fc0ff35 [FEATURE] Add support for ImageViewHelper "src" usages (Nicole Cordes)

2018-09-12         [RELEASE] Release of filefill 1.3.2 (Nicole Cordes)
2018-09-12 fb797f5 [TASK] Update supporting files to EXT:my_skeleton 0.1.4 (Nicole Cordes)
2018-09-12 03ec1b0 [BUGFIX] Handle response from socket correctly (Nicole Cordes)
2018-09-12 8f80f8d [BUGFIX] Prevent uncaught exception while file upload (Nicole Cordes)
2018-09-12 48c2d9c [TASK] Update supporting files to EXT:my_skeleton 0.1.3 (Nicole Cordes)
2018-06-23 795a239 [TASK] Update supporting files to EXT:my_skeleton 0.1.0 (Nicole Cordes)

2018-06-22         [RELEASE] Release of filefill 1.3.1 (Nicole Cordes)
2018-06-21 86775c6 Use short scalar casting (Nicole Cordes)
2018-06-20 0c1d00f fix http_code check for typo3 7.6 (kaywalker)

2018-06-19         [RELEASE] Release of filefill 1.3.0 (Nicole Cordes)
2018-06-19 0bc79fa [BUGFIX] Simplify return conditions in ResourceFactorySlot (Nicole Cordes)
2018-06-11 d16bf28 [TASK] Add documentation for TYPO3_CONF_VARS configuration (Nicole Cordes)
2018-06-11 120b1e7 [BUGFIX] Support multiple domain configuration (Nicole Cordes)